package main.java.org.example;

public class Movie extends Media {


    public Movie(String title, String category, String release, int rating) {
        super(title, category, release, rating);

    }
}
