package org.example;

import java.util.List;

public class Streamingservice
{

    List<user>
    List<movies>
    List<series>

    public void displayStartMenu()
    {

    }

    public void displayMainMenu(User user)
    {

    }

    public Movie searchMovie(String title)
    {
        return null;
    }

    public Movie searchMovieFromCategory(String category)
    {
        return null;
    }

    public void playMovie(String movie)
    {

    }
    public void removeMovie(User user, Movie movie)
    {

    }

    public void saveLoginInfo(User user)
    {

    }

}
